<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/icon_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/lexend_bold"
                android:gravity="bottom"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_15sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_background"
            android:text="Войти"
            android:textSize="@dimen/_14sdp"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/toSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center"
            android:text="@string/nohaveacc"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>